fix DT-2375, Lots of white space when the feature image is hidden.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -193,7 +193,8 @@ select::-ms-expand{
 }
 
 
-div[data-widget-type="feature"] + .home-page {
+div[data-widget-type="feature"] + .home-page,
+div[data-widget-type="feature"].bk-tpl-hidden + .home-page {
     position: absolute;
     top: 100vh;
     @media only screen and (max-width: 1024px) {
